# airflow-provider-paradime-dbt

./: .astro-registry.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml  test.yml
.github/workflows/release_to_pypi.yml github/workflows/: publish_to_pypi.yml  release_to_pypi.yml
paradime_dbt_provider/: __init__.py
paradime_dbt_provider/example_dags/: bolt_dbt_schedule_run.py  bolt_run_custom_commands.py  user_management.py
paradime_dbt_provider/hooks/: paradime.py
paradime_dbt_provider/operators/: paradime.py
paradime_dbt_provider/sensors/: paradime.py
sample_provider/: __init__.py
sample_provider/hooks/: paradime.py
sample_provider/operators/: paradime.py  sample.py
sample_provider/sensors/: paradime.py  sample.py
tests/hooks/: test_paradime.py
tests/operators/: test_paradime.py
tests/sensors/: test_paradime.py
